# torchio

./: .all-contributorsrc  .bumpversion.cfg  .coveralls.yml  .deepsource.toml  .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  fepegar-digital-copyright-instructions.txt  fepegar-torchio-digital-copyright-04-01-2022.enc  justfile  mypy.ini  print_system.py  pyproject.toml  requirements-dev.txt  requirements-run.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  requirements-pinned.txt
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yaml  config.yml  feature_request.md  not_working.md  not_working.yml  questions_help_support.md
.github/actions/publish-package/: action.yml
.github/workflows/: check_pull_request_title.yml  code_quality.yml  lint.yml  publish.yml  smokeshow.yml  tests.yml  twitter.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/examples/: README.rst  plot_3d_to_2d.py  plot_colin27.py  plot_custom_z_spacing.py  plot_history.py  plot_include_exclude.py  plot_video.py
docs/source/: README.rst  cli.rst  conf.py  contributing.rst  credits.rst  data.rst  datasets.rst  example.rst  index.rst  installation.rst  modules.rst  plot_medmnist.py  quickstart.rst  reproducibility.rst  slicer.rst  torchio.data.inference.rst  torchio.data.rst  torchio.data.sampler.rst  torchio.datasets.rst  torchio.rst  torchio.transforms.augmentation.intensity.rst  torchio.transforms.augmentation.rst  torchio.transforms.augmentation.spatial.rst  torchio.transforms.preprocessing.intensity.rst  torchio.transforms.preprocessing.rst  torchio.transforms.preprocessing.spatial.rst  torchio.transforms.rst  transforms.rst
docs/source/_static/: copybutton.js
docs/source/_templates/: layout.html
docs/source/data/: aggregator.rst  data.rst  dataset.rst  image.rst  images.rst  index.rst  patch_based.rst  patch_inference.rst  patch_training.rst  queue.rst  sampler.rst  sampling.rst  subject.rst
docs/source/interfaces/: cli.rst  index.rst  slicer.rst
docs/source/patches/: index.rst  patch_inference.rst  patch_training.rst
docs/source/sphinxext/: plot_directive.py
docs/source/transforms/: augmentation.rst  others.rst  preprocessing.rst  transforms.rst
examples/: README.md  example_heteromodal.py  example_inference.py  example_lambda.py  example_motion.py  example_motion2.py  example_multimodal.py  example_queue.py  example_retromoco_motion.py  example_retromoco_motion_bug.py  example_save_batch.py  example_save_image.py  example_time_course_kspace_affines.py  queue.py  test_dataset.py
scripts/test/: test.py  test_dataset.py  test_stencil.py  test_vtk_nii.py
src/torchio/: __init__.py  constants.py  download.py  reference.py  typing.py  utils.py  visualization.py
src/torchio/cli/: apply_transform.py  print_info.py
src/torchio/data/: __init__.py  base.py  dataset.py  image.py  io.py  loader.py  queue.py  subject.py
src/torchio/datasets/: __init__.py  bite.py  episurg.py  fpg.py  ixi.py  medmnist.py  rsna_miccai.py  rsna_spine_fracture.py  slicer.py  visible_human.py
src/torchio/transforms/: __init__.py  data_parser.py  fourier.py  intensity_transform.py  interpolation.py  lambda_transform.py  spatial_transform.py  transform.py
tests/: __init__.py  test_cli.py  test_images_dataset.py  test_multi_modal.py  test_random_elastic_deformation.py  test_random_motion.py  test_torchio.py  test_transforms.py  test_utils.py  utils.py
tests/data/: test_grid_sampler.py  test_image.py  test_images_dataset.py  test_inference.py  test_io.py  test_label_sampler.py  test_queue.py  test_subject.py  test_subjects_dataset.py
tests/data/inference/: test_aggregator.py  test_grid_sampler.py  test_inference.py  test_inference_smaller.py
tests/data/sampler/: test_label_sampler.py  test_patch_sampler.py  test_random_sampler.py  test_uniform_sampler.py  test_weighted_sampler.py
tests/datasets/: test_ixi.py  test_medmnist.py
tests/image_data/dicom/: IMG0001.dcm  IMG0002.dcm  IMG0003.dcm  IMG0004.dcm  IMG0005.dcm  IMG0006.dcm  IMG0007.dcm  IMG0008.dcm  IMG0009.dcm  IMG0010.dcm  IMG0011.dcm  IMG0012.dcm  IMG0013.dcm  IMG0014.dcm  IMG0015.dcm  IMG0016.dcm  IMG0017.dcm
tests/transforms/: test_collate.py  test_invertibility.py  test_lambda_transform.py  test_random_elastic_deformation.py  test_random_motion.py  test_reproducibility.py  test_transforms.py
tests/transforms/augmentation/: test_oneof.py  test_random_affine.py  (+15 more)
torchio/: __init__.py  cli.py  constants.py  download.py  io.py  queue.py  reference.py  torchio.py  typing.py  utils.py  visualization.py
torchio/cli/: apply_transform.py  print_info.py
torchio/data/: .queue.py.swp  __init__.py  dataset.py  image.py  imageh5.py  images.py  images_classif.py  io.py  orientation.py  parallel_queue.py  queue.py  subject.py
torchio/dataset/: __init__.py  dataset.py  images.py  images_classif.py  queue.py
torchio/datasets/: __init__.py  bite.py  episurg.py  fpg.py  ixi.py  medmnist.py  rsna_miccai.py  slicer.py  vhp.py  visible_human.py
torchio/inference/: __init__.py  aggregator.py  grid_sampler.py
torchio/sampler/: __init__.py  label.py  sampler.py
torchio/transforms/: __init__.py  data_parser.py  fourier.py  histogram_standardisation.py  histogram_standardization.py  intensity_transform.py  interpolation.py  lambda_transform.py  metrics.py  random_affine.py  random_bias_field.py  random_elastic_deform.py  random_elastic_deformation.py  random_flip.py  random_motion.py  random_motion2.py  random_noise.py  random_transform.py  rescale.py  rescale_within_mask.py  spatial_transform.py  transform.py  z_normalization.py
tutorials/: README.md  example_heteromodal.py
(+169 files in other folders)
