[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchio"
version = "0.20.2"
description = "Tools for medical image processing with PyTorch"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "TorchIO contributors"}
]
maintainers = [
    {name = "Fernando Perez-Garcia", email = "fepegar@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed"
]
keywords = ["medical", "image processing", "pytorch", "augmentation", "mri"]
requires-python = ">=3.9,<3.13"
dependencies = [
    "deprecated",
    "humanize",
    "nibabel>=2",
    "numpy>=1.15",
    "scipy>=0.10",
    "simpleitk!=2.0.*,!=2.1.1.1",
    "torch>=1.13",
    "tqdm",
    "typer",
]

[project.optional-dependencies]
csv = [
    "pandas>=1",
]
plot = [
    "matplotlib>=2",
]

[project.scripts]
tiohd = "torchio.cli.print_info:app"
tiotr = "torchio.cli.apply_transform:app"
torchio-transform = "torchio.cli.apply_transform:app"

[project.urls]
Homepage = "http://torchio.rtfd.io"
Source = "https://github.com/fepegar/torchio"
"Issue tracker" = "https://github.com/fepegar/torchio/issues"
Documentation = "http://torchio.rtfd.io"
"Release notes" = "https://github.com/fepegar/torchio/releases"

[dependency-groups]
dev = [
    { include-group = "doc" },
    { include-group = "maintain" },
    { include-group = "test" },
    "ipykernel>=6.29.5",
    "ruff>=0.8.1",
    "ipywidgets>=8.1.5",
]
doc = [
    "einops>=0.8.0",
    "furo>=2024.8.6",
    "matplotlib>=3.9.3",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-gallery>=0.18.0",
    "sphinxext-opengraph>=0.9.1",
]
maintain = [
    "bump2version>=1.0.1",
    "pre-commit-uv>=4.1.4",
]
test = [
    "coverage>=7.6.8",
    "mypy>=1.13.0",
    "parameterized>=0.9.0",
    "pillow",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
    "tox-uv>=1.16.0",
    "types-deprecated>=1.2.15.20241117",
]

[tool.mypy]
pretty = true

[[tool.mypy.overrides]]
module = "duecredit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nibabel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "serial",
]
filterwarnings = [
    # Ignore SimpleITK Swig warnings
    "ignore:builtin type .* has no __module__ attribute",
    "ignore:Casting complex values to real discards the imaginary part",
    # Raised by SimpleITK on CI
    "ignore:invalid escape sequence",
]

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = [
    "B",
    "E",
    "F",
    "I",
    "W",
]
ignore = [
    "E203",
    "E501",
    "N813",
]

[tool.ruff.lint.isort]
force-single-line = true
