[metadata]
name = torchio
version = 0.18.81
url = http://torchio.rtfd.io
download_url = https://github.com/fepegar/torchio
author = TorchIO contributors
maintainer = Fernando Perez-Garcia
maintainer_email = fepegar@gmail.com
keywords = medical image processing pytorch augmentation mri
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Scientific/Engineering :: Image Processing
	Topic :: Scientific/Engineering :: Medical Science Apps.
	Typing :: Typed
license = Apache license
license_file = LICENSE
description = Tools for medical image processing with PyTorch
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
project_urls = 
	Source=https://github.com/fepegar/torchio
	Issue tracker=https://github.com/fepegar/torchio/issues
	Documentation=http://torchio.rtfd.io
	Release notes=https://github.com/fepegar/torchio/releases

[options]
python_requires = >=3.7
include_package_data = True
install_requires = 
	Deprecated
	SimpleITK!=2.0.*,!=2.1.1.1
	click
	humanize
	nibabel
	numpy>=1.15
	scipy
	torch>=1.1
	tqdm
zip_safe = False

[options.extras_require]
plot = 
	matplotlib
dev = 
	bump2version
	codecov
	coverage
	flake8
	matplotlib
	mypy
	pre-commit
	pytest
	pytest-cov
	tox
	types-Deprecated
doc = 
	einops
	furo
	matplotlib
	sphinx
	sphinx-autobuild
	sphinx-copybutton
	sphinx-gallery
	sphinxext-opengraph
all = 
	%(plot)s
	%(dev)s
	%(doc)s

[options.entry_points]
console_scripts = 
	tiohd=torchio.cli.print_info:main
	tiotr=torchio.cli.apply_transform:main
	torchio-transform=torchio.cli.apply_transform:main

[options.package_data]
torchio = 
	py.typed

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
