[metadata]
name = torchio
version = 0.18.84
description = Tools for medical image processing with PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = http://torchio.rtfd.io
author = TorchIO contributors
maintainer = Fernando Perez-Garcia
maintainer_email = fepegar@gmail.com
license = Apache-2.0
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Typing :: Typed
download_url = https://github.com/fepegar/torchio
keywords = medical image processing pytorch augmentation mri
project_urls =
    Source = https://github.com/fepegar/torchio
    Issue tracker = https://github.com/fepegar/torchio/issues
    Documentation = http://torchio.rtfd.io
    Release notes = https://github.com/fepegar/torchio/releases

[options]
install_requires =
    Deprecated
    SimpleITK!=2.0.*,!=2.1.1.1
    click
    humanize
    nibabel
    numpy>=1.15
    scipy
    torch>=1.1
    tqdm
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tiohd=torchio.cli.print_info:main
    tiotr=torchio.cli.apply_transform:main
    torchio-transform=torchio.cli.apply_transform:main

[options.extras_require]
all =
    %(csv)s
    %(dev)s
    %(doc)s
    %(plot)s
csv =
    pandas
dev =
    bump2version
    codecov
    coverage
    flake8
    matplotlib
    mypy
    pandas-stubs
    pre-commit
    pytest
    pytest-cov
    tox
    types-Deprecated
doc =
    einops
    furo
    matplotlib
    sphinx
    sphinx-autobuild
    sphinx-copybutton
    sphinx-gallery
    sphinxext-opengraph
plot =
    matplotlib

[options.package_data]
torchio =
    py.typed

[bdist_wheel]
universal = 1
